// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: All should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    User variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="alice.johnson's avatar"
            accessible={true}
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderRadius={4}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              sfEffect={null}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/alice.johnson?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                }
              }
              symbolSize={null}
              symbolWeight={null}
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6C727A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#2F343D",
                },
              ]
            }
          >
            Alice Johnson
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remove"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 2,
          }
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1F2329",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    SIP variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6C727A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#2F343D",
                },
              ]
            }
          >
            +55 11 99999-9999
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remove"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 2,
          }
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1F2329",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    Long username variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="this.is.a.very.long.username.for.storybook.preview's avatar"
            accessible={true}
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderRadius={4}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              sfEffect={null}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/this.is.a.very.long.username.for.storybook.preview?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                }
              }
              symbolSize={null}
              symbolWeight={null}
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6C727A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#2F343D",
                },
              ]
            }
          >
            Long display name to validate text truncation behavior for SelectedPeer in narrow widths
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remove"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 2,
          }
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1F2329",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: LongUsername should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    Long username variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="this.is.a.very.long.username.for.storybook.preview's avatar"
            accessible={true}
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderRadius={4}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              sfEffect={null}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/this.is.a.very.long.username.for.storybook.preview?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                }
              }
              symbolSize={null}
              symbolWeight={null}
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6C727A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#2F343D",
                },
              ]
            }
          >
            Long display name to validate text truncation behavior for SelectedPeer in narrow widths
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remove"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 2,
          }
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1F2329",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: Sip should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    SIP variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6C727A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#2F343D",
                },
              ]
            }
          >
            +55 11 99999-9999
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remove"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 2,
          }
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1F2329",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: User should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    User variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="alice.johnson's avatar"
            accessible={true}
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderRadius={4}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              sfEffect={null}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/alice.johnson?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderRadius": 4,
                  "height": 28,
                  "width": 28,
                }
              }
              symbolSize={null}
              symbolWeight={null}
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6C727A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#2F343D",
                },
              ]
            }
          >
            Alice Johnson
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remove"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 2,
          }
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1F2329",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
